# arxiv-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
arxiv_agent/: __init__.py  cli.py  config.py  scheduler.py
arxiv_agent/agents/: __init__.py  base.py  classifier_agent.py  emailer_agent.py  scraper_agent.py  supervisor.py
arxiv_agent/email/: __init__.py  sender.py  templates.py
arxiv_agent/llm/: __init__.py  classifier.py  provider_utils.py  summarizer.py
arxiv_agent/sources/: arxiv_source.py  base_source.py  enhanced_paper.py  papers_cool_source.py
arxiv_agent/storage/: archiver.py  json_storage.py
arxiv_agent/utils/: __init__.py  intervals.py  logging.py  retry.py  runtime.py  timezone.py
docs/: operations.md  troubleshooting.md
tests/: conftest.py  test_cli.py  test_config.py  test_documentation_examples.py  test_logging.py  test_scheduler.py
tests/agents/: test_classifier_agent.py  test_emailer_agent.py  test_scraper_agent.py
tests/email/: test_sender.py  test_templates.py
tests/integration/: test_data_pipeline.py  test_notification_pipeline.py  test_startup_readiness.py
tests/llm/: test_classifier.py  test_summarizer.py
tests/sources/: test_arxiv_source.py  test_base_source.py  test_papers_cool_source.py
tests/storage/: test_archiver.py  test_json_storage.py
tests/utils/: test_retry.py
