[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-agent"
version = "0.1.0"
description = "Automated research assistant that scans daily arXiv papers, filters them with OpenAI or Anthropic models, and delivers SMTP email digests."
readme = "README.md"
authors = [
    { name = "Tongxiao", email = "tongxiao@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "deepagents",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pytz>=2023.3",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.7"]

[project.urls]
Homepage = "https://github.com/tongxiao/arxiv-agent"
Repository = "https://github.com/tongxiao/arxiv-agent"
Issues = "https://github.com/tongxiao/arxiv-agent/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "arxiv_agent.agents.classifier_agent",
    "arxiv_agent.agents.emailer_agent",
    "arxiv_agent.agents.scraper_agent",
    "arxiv_agent.email.templates",
    "arxiv_agent.llm.classifier",
    "arxiv_agent.llm.summarizer",
    "arxiv_agent.scheduler",
    "arxiv_agent.sources.arxiv_source",
    "arxiv_agent.sources.enhanced_paper",
    "arxiv_agent.sources.papers_cool_source",
    "arxiv_agent.utils.runtime",
    "arxiv_agent.utils.retry",
]
ignore_errors = true
